MDEV-25305: MyRocks: Killing server during RESET MASTER can lose last transactions

rocksdb_checkpoint_request() should call FlushWAL(sync=true) (which does
write-out and sync), not just SyncWAL()  (which just syncs without writing
out)